# soradyne

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  aider.conf.yml  build.sh  build_rust.sh  giantt-monorepo-transition-notes.txt  melos.yaml  nestbox-example-system-usage-symlink  pubspec.yaml  soradyne_giantt_source.txt  source_manager.py
.source_manager/: config.json  exclusions.txt  individual_exclusions.txt  priority.txt
apps/giantt/: README.md  giantt_source_manager.py  pubspec.yaml  pubspec_overrides.yaml
apps/giantt/.source_manager/: config.json  exclusions.txt  priority.txt
apps/giantt/lib/: main.dart
apps/giantt/test/: widget_test.dart
apps/inventory/: pubspec.yaml
apps/inventory/assets/: seed_inventory.txt  test_inventory.txt
apps/inventory/lib/: main.dart
apps/inventory/scripts/: diff_inventory.py
apps/inventory/test/: widget_test.dart
apps/soradyne_demo/: README.md  copy_dylib.sh  pubspec.yaml  pubspec_overrides.yaml
apps/soradyne_demo/flutter_app/: copy_dylib.sh  pubspec.yaml
apps/soradyne_demo/macos/: Podfile
apps/soradyne_demo/test/: widget_test.dart
docs/: 20260312_giantt_sync_thoughts.txt  INDEX.md  app_soradyne_boundary.txt  authorization-model.md  capsule-ensemble-implementation-plan.md  capsule-imp-plan-notes.rtf  convergent_document_design.md  tcp-sync-analysis.md  tcp_emulation_of_ble_plan.txt  transport_architecture.md  transport_tiers.md
docs/port_reference/: giantt_cli.py  giantt_core.py
docs/rim-protocol/: Makefile  rim-self-data-flows.aux  rim-self-data-flows.out  rim-self-data-flows.tex  rim-self-data-flows.toc
examples/: album_sync_test.rs  block_storage_example.rs  heartrate_demo.rs  renderer_test.rs  robot_joints.rs  visual_block_test.rs  web_album_server.rs
flutter_app/: copy_dylib.sh  pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/ffi/: soradyne_bindings.dart
flutter_app/lib/models/: media_item.dart
flutter_app/lib/screens/: album_detail_screen.dart  album_list_screen.dart
flutter_app/lib/services/: album_service.dart
flutter_app/lib/theme/: app_theme.dart
flutter_app/lib/widgets/: progressive_image.dart
flutter_app/macos/Runner/: DebugProfile.entitlements  Info.plist
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
giantt-design-notes/: giantt-cli-manual.md  giantt-features.txt  giantt-guidelines.txt  giantt-notation.md  giantt-overview.txt  giantt-technical-specification.txt
lib/screens/: album_detail_screen.dart  album_list_screen.dart  media_detail_screen.dart
lib/widgets/: comments_section.dart  media_controls.dart  media_thumbnail.dart
src/: lib.rs
src/album/: album.rs  crdt.rs  mod.rs  operations.rs  renderer.rs  sync.rs
src/bindings/: identity.rs  mod.rs  sdo.rs  storage.rs
src/core/: mod.rs  sync.rs  transport.rs
src/core/identity/: authentication.rs  device.rs  key_management.rs  mod.rs
src/ffi/: mod.rs
src/flow/: conflict.rs  error.rs  mod.rs  traits.rs
src/network/: connection.rs  discovery.rs  mod.rs
src/sdo/: base.rs  eventual.rs  mod.rs  realtime.rs
src/storage/: block.rs  block_file.rs  block_manager.rs  crystallization.rs  dissolution.rs  erasure.rs  local.rs  local_file.rs  mod.rs
src/types/: heartrate.rs  media.rs  mod.rs
src/video/: mod.rs
tools/: build_rust.sh
ts/: package.json
ts/examples/: chat.ts  heartrate.ts
ts/src/: index.ts
web_static/: index.html
(+109 files in other folders)
