[package]
name = "soradyne"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core functionality
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
base64 = "0.13"

# Cryptography
ed25519-dalek = "2.0.0"
x25519-dalek = "2.0.0"
sha2 = "0.10"
rand = "0.8"
hmac = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Networking
libp2p = { version = "0.51", features = ["tcp", "noise", "mdns"] }

# For TypeScript bindings
napi = { version = "2.12", features = ["serde-json"] }
napi-derive = "2.12"

[build-dependencies]
napi-build = "2.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
