[package]
name = "soradyne"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core functionality
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
log = "0.4"
anyhow = "1.0"
hex = "0.4.3"
sha2 = "0.10.9"

# Networking

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[[example]]
name = "block_storage_example"
path = "examples/block_storage_example.rs"
