[package]
name = "soradyne"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core functionality
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
log = "0.4"
anyhow = "1.0"
hex = "0.4.3"
sha2 = "0.10.9"

# Networking

# HTTP client for downloading test images
reqwest = { version = "0.11", features = ["stream", "json"] }

# Image processing
image = "0.24"

# Base64 encoding for testing
base64 = { version = "0.21", optional = true }

# Additional dependencies for album system
tempfile = "3.8"

# Rendering dependencies
imageproc = "0.23"
ab_glyph = "0.2"

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
criterion = "0.5"

[features]
default = []
image-processing = ["base64"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[[example]]
name = "block_storage_example"
path = "examples/block_storage_example.rs"

[[example]]
name = "block_storage_real_images"
path = "examples/block_storage_real_images.rs"
required-features = []

[[example]]
name = "visual_block_test"
path = "examples/visual_block_test.rs"
required-features = []

[[example]]
name = "large_video_test"
path = "examples/large_video_test.rs"
required-features = []

[[example]]
name = "album_sync_test"
path = "examples/album_sync_test.rs"
required-features = []

[[example]]
name = "renderer_test"
path = "examples/renderer_test.rs"
required-features = []

[[bin]]
name = "block_storage_cli"
path = "src/bin/block_storage_cli.rs"
